# Relix

./: .dockerignore  .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.anchor.json  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: app-nav.tsx  capability-chip.tsx  market-activity.tsx  prize-payout.tsx  proof-json.tsx  protocol-proof.tsx  reward-ladder.tsx  specialist-ui.tsx
app/lib/: activity-store.ts  agent-treasury.ts  anthropic.ts  campaign-ai.ts  campaign-assets.ts  campaign.ts  crypto.ts  data-path.ts  delivery-attestation.ts  delivery-readiness.ts  github-tool.ts  google-analytics.ts  growth-employee.ts  kv-json-store.ts  market-event-store.ts  market-events.ts  memory-store.ts  oauth.ts  post-store.ts  post-types.ts  prize-pool.ts  prize-store.ts  proof-store.ts  relix-escrow.ts  repository-analysis.ts  reputation-store.ts  reward-ladder.ts  reward-store.ts  session.ts  specialist-agents.ts  specialist-capabilities.ts  specialist-models.ts  specialist-sdk.ts  specialist-store.ts  wallet.ts  website-analysis.ts  x-account-cookie.ts  x-api.ts  x-store.ts  x-types.ts
app/marketplace/: page.tsx
docker/: coral-server-config.toml  start.sh
docs/: DEMO.md  HOSTED_CORALOS.md
programs/relix_escrow/: Cargo.toml
programs/relix_escrow/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/relix_escrow/src/instructions/: initialize_escrow.rs  refund_escrow.rs  release_escrow.rs
tests/: relix_escrow.ts
(+66 files in other folders)
